--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,25 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PharmsysOf
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-14\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
+file.reference.jgoodies-common-1.7.0.jar=src\\complementos\\jgoodies-common-1.7.0.jar
+file.reference.jgoodies-looks-2.5.3.jar=src\\complementos\\jgoodies-looks-2.5.3.jar
+file.reference.JTattooDemo.jar=src\\complementos\\JTattooDemo.jar
+file.reference.liquidlnf.jar=src\\complementos\\liquidlnf.jar
 file.reference.SQL-JDBC4.jar=..\\..\\..\\Desktop\\LibrosApp\\src\\complementos\\SQL-JDBC4.jar
+file.reference.SQL-JDBC4.jar-1=src\\complementos\\SQL-JDBC4.jar
+file.reference.UpperEssentialLookAndFeel.jar=src\\complementos\\UpperEssentialLookAndFeel.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.SQL-JDBC4.jar}
+    ${file.reference.SQL-JDBC4.jar}:\
+    ${file.reference.JTattooDemo.jar}:\
+    ${file.reference.SQL-JDBC4.jar-1}:\
+    ${file.reference.UpperEssentialLookAndFeel.jar}:\
+    ${file.reference.jgoodies-common-1.7.0.jar}:\
+    ${file.reference.jgoodies-looks-2.5.3.jar}:\
+    ${file.reference.liquidlnf.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
